added articles/edit frame

--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -1,5 +1,4 @@
-<%- include("partials/header.ejs") %>
-
+<%- include("../partials/header.ejs") %>
 
 <div class="container-fluid">
     <h1 class="my-2">Blog Articles</h1>
@@ -19,4 +18,4 @@
     <% }); %>
 </div>
 
-<%- include("partials/footer.ejs") %>
+<%- include("../partials/footer.ejs") %>
