added db and finish brief blog

--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -13,6 +13,7 @@
                 <div class="card-text my-2">
                     <%= article.description %>
                 </div>
+                <a href="articles/<%= article.id %>" class="btn btn-light">Read More</a>
             </div>
         </div>
     <% }); %>
