--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
 <h1 class="my-2">New Article</h1>
-<form action="/acticles" method="POST">
+<form action="/articles" method="POST">
     <%- include("../partials/formFields.ejs") %>
 </form>
 
