--- a/views/partials/formFields.ejs
+++ b/views/partials/formFields.ejs
@@ -1,17 +1,17 @@
 <div class="form-group my-3">
     <label for="title">Title</label>
-    <input required type="text" name="title" id="title" class="form-control">
+    <input required value="<%= article.title %>" type="text" name="title" id="title" class="form-control">
     
 </div>
 
 <div class="form-group my-3">
     <label for="description">Description</label>
-    <textarea name="description" id="description" class="form-control"></textarea>
+    <textarea required name="description" id="description" class="form-control"><%= article.description %></textarea>
 </div>
 
 <div class="form-group my-3">
     <label for="markdown">Markdown</label>
-    <textarea name="markdown" id="markdown" class="form-control"></textarea>
+    <textarea required name="markdown" id="markdown" class="form-control"><%= article.markdown %></textarea>
 </div>
 
 <a href="/" class="btn btn-secondary">Cancel</a>
