fix edit route bug

--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -5,7 +5,7 @@
 <div class="text-muted my-2"><%= article.createdAt.toLocaleDateString() %></div>
 </div>
 <a href="/" class="btn btn-secondary">All Articles<Article></Article></a>
-<a href="/articles/edit<%= article.id %>" class="btn btn-info my-2">Edit</a>
+<a href="/articles/edit/<%= article.id %>" class="btn btn-info my-2">Edit</a>
 
 <div class="my-2">
     <%- article.sanitizedHtml %>
