--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -1,7 +1,7 @@
 <%- include("../partials/header.ejs") %>
 
 <div class="container-fluid">
-<h1 class="my-2">New Article</h1>
+<h1 class="my-2 fw-bolder">New Article</h1>
 <form action="/articles" method="POST">
     <%- include("../partials/formFields.ejs") %>
 </form>
