--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
     </main>
-    <div class="container-fluid border-top">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
-        <p class="text-muted">Created by <a href="https://github.com/ansonhe97">Anson He</a> | Copyright © <%= new Date().getFullYear() %></p>
+    <div class="container-fluid">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-1 my-3">
+        <p class="text-muted fw-lighter">Created by <a href="https://github.com/ansonhe97">Anson He</a> | Copyright © <%= new Date().getFullYear() %></p>
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
             <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
             <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
