--- a/views/partials/formFields.ejs
+++ b/views/partials/formFields.ejs
@@ -1,19 +1,21 @@
-<div class="form-group my-3">
+<div class="form-group my-3 fw-bold text-dark">
     <label for="title">Title</label>
     <input required value="<%= article.title %>" type="text" name="title" id="title" class="form-control">
     
 </div>
 
-<div class="form-group my-3">
+<div class="form-group my-3 fw-bold text-dark">
     <label for="description">Description</label>
     <textarea required name="description" id="description" class="form-control"><%= article.description %></textarea>
 </div>
 
-<div class="form-group my-3">
+<div class="form-group my-3 fw-bold text-dark">
     <label for="markdown">Markdown</label>
     <textarea required name="markdown" id="markdown" class="form-control"><%= article.markdown %></textarea>
 </div>
 
-<a href="/" class="btn btn-secondary">Cancel</a>
-<button type="submit" class="btn btn-primary my-2">Save</button>
+<div class="my-2">
+    <a href="/" class="btn btn-secondary fw-light">Cancel</a>
+    <button type="submit" class="btn btn-primary my-2 fw-light">Save</button>
+</div>
 
