--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,3 +2,9 @@ footer {
     font-size: 1rem;
     position: absolute;
 }
+
+body {
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,0.15) 0%, rgba(148,187,233,0.15) 100%);
+    min-height: 100vh;
+}
