--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
     <h1 class="my-2 fw-bolder">Blog Articles</h1>
-    <a class="btn btn-dark my-3" href="/articles/new">New Article</a>
+    <a class="btn btn-dark my-3 fw-light" href="/articles/new">New Article</a>
     <% articles.forEach(article => { %>
         <div class="card my-4">
             <div class="card-body">
