--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,12 @@
     </main>
     <div class="container-fluid">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-1 my-3">
-        <p class="text-muted fw-lighter">Created by <a href="https://github.com/ansonhe97">Anson He</a> | Copyright © <%= new Date().getFullYear() %></p>
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-1 my-2 text-end">
+        <p class="text-muted fw-lighter my-1">Created by Anson He | Copyright © <%= new Date().getFullYear() %></p>
+        <ul class="nav justify-content-end list-unstyled d-flex">
+            <li class="ms-2">
+                <a class="text-muted" href="https://github.com/ansonhe97" rel="noopener noreferrer"><i class="bi bi-github" style="font-size: 20px;"></i></a>
+                <a class="text-muted" href="https://www.linkedin.com/in/anson-he-5b3960131/" rel="noopener noreferrer"><i class="bi bi-linkedin" style="font-size: 20px;"></i></a>
+            </li>
         </ul>
     </footer>
     </div>
