--- a/views/articles/edit.ejs
+++ b/views/articles/edit.ejs
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
 <h1 class="my-2 fw-bolder">Edit Article</h1>
-<form action="/articles/<%= article.id %>?_method=PUT" method="POST">
+<form action="/articles/<%= article.slug %>?_method=PUT" method="POST">
     <%- include("../partials/formFields.ejs") %>
 </form>
 </div>
