--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -14,8 +14,8 @@
                     <%= article.description %>
                 </div>
                 <a href="/articles/<%= article.slug %>" class="btn btn-success fw-light">Read More</a>
-                <a href="/articles/edit/<%= article.id %>" class="btn btn-light fw-light">Edit</a>
-                <form action="/articles/<%= article.id %>?_method=DELETE" method="POST" class="d-inline">
+                <a href="/articles/edit/<%= article.slug %>" class="btn btn-light fw-light">Edit</a>
+                <form action="/articles/<%= article.slug %>?_method=DELETE" method="POST" class="d-inline">
                     <button type="submit" class="btn btn-danger fw-light">Delete</button>
                 </form>
             </div>
