--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,3 +8,7 @@ body {
     background: radial-gradient(circle, rgba(238,174,202,0.15) 0%, rgba(148,187,233,0.15) 100%);
     min-height: 100vh;
 }
+
+.card {
+    box-shadow: 0 0 2px lightgrey;
+}
