--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -15,7 +15,7 @@
                 </div>
                 <a href="/articles/<%= article.slug %>" class="btn btn-success fw-light">Read More</a>
                 <a href="/articles/edit/<%= article.slug %>" class="btn btn-light fw-light">Edit</a>
-                <form action="/articles/<%= article.slug %>?_method=DELETE" method="POST" class="d-inline">
+                <form action="/articles/<%= article.slug %>?_method=DELETE" method="POST" class="d-inline" onclick="return confirm('Are you sure you want to delete this article?');">
                     <button type="submit" class="btn btn-danger fw-light">Delete</button>
                 </form>
             </div>
