--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -7,7 +7,7 @@
         </div>
         
         <a href="/" class="btn btn-secondary">All Articles<Article></Article></a>
-        <a href="/articles/edit/<%= article.slug %>" class="btn btn-info my-2">Edit</a>
+        <a href="/articles/edit/<%= article.slug %>" class="btn btn-light my-2">Edit</a>
         
         <div class="my-2">
             <%- article.sanitizedHtml %>
@@ -15,25 +15,25 @@
 
     <!-- COMMENTS -->
     <div class="container-fluid my-2 py-2 px-0">
-        <h3 class="border-top pt-2 fw-normal">Comments</h3>
+        <h3 class="border-top pt-2 fw-bold">Comments</h3>
         <form action="/articles/<%= article.slug %>/comments" method="POST" class="d-flex align-items-center">
             <div class="flex-grow-1 me-2">
                 <textarea id="commentContent" name="commentContent" required class="form-control px-2" style="height: 38px;"></textarea>
             </div>
-            <button type="submit" class="btn btn-secondary fw-lighter btn-sm">Add Comment</button>
+            <button type="submit" class="btn btn-secondary fw-light btn-sm">Add Comment</button>
         </form>
         <!-- Add form to delete all comments -->
         <form action="/articles/<%= article.slug %>/comments/delete" method="POST" class="mt-3">
-            <button type="submit" class="btn btn-danger fw-lighter btn-sm" onclick="return confirm('Are you sure you want to delete all comments?');">Delete All Comments</button>
+            <button type="submit" class="btn btn-danger fw-light btn-sm" onclick="return confirm('Are you sure you want to delete all comments?');">Delete All Comments</button>
         </form>
     </div>
 
 
     <!-- SHOWING COMMENTS -->
-    <div class="container-fluid my-2 py-2 px-0 fw-lighter fs-6">
+    <div class="container-fluid my-2 py-2 px-0 fw-lighter fs-6 text-muted">
         <% const displayedComments = [...article.comments].reverse(); %>
         <% displayedComments.forEach(comment => { %>
-            <p><strong><%= comment.username %></strong> (<%= comment.createdAt.toDateString() %>):
+            <p> (<%= comment.createdAt.toDateString() %>):
             <%= comment.body %></p>
         <% }); %>
     </div>
