update github url

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
         <p class="text-muted fw-lighter my-1">Created by Anson He | Copyright © <%= new Date().getFullYear() %></p>
         <ul class="nav justify-content-end list-unstyled d-flex">
             <li class="ms-2">
-                <a class="text-muted" href="https://github.com/ansonhe97" rel="noopener noreferrer"><i class="bi bi-github" style="font-size: 20px;"></i></a>
+                <a class="text-muted" href="https://github.com/ansonhex" rel="noopener noreferrer"><i class="bi bi-github" style="font-size: 20px;"></i></a>
                 <a class="text-muted" href="https://www.linkedin.com/in/anson-he-5b3960131/" rel="noopener noreferrer"><i class="bi bi-linkedin" style="font-size: 20px;"></i></a>
             </li>
         </ul>
